--- a/nextjs-openai/package.json
+++ b/nextjs-openai/package.json
@@ -10,30 +10,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.363.0",
-    "next": "14.1.4",
-    "openai": "^4.51.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.5.3",
-    "tailwind-merge": "^2.2.2",
+    "@ai-sdk/openai": "^1.3.22",
+    "@radix-ui/react-slot": "^1.2.2",
+    "ai": "^4.3.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
+    "next": "15.3.2",
+    "react": "^19",
+    "react-dom": "^19",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-textarea-autosize": "^8.5.9",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   }
 }
