--- a/node-openai/package.json
+++ b/node-openai/package.json
@@ -3,11 +3,14 @@
     "dev": "tsx ./index.ts"
   },
   "devDependencies": {
-    "tsx": "^4.15.5",
-    "typescript": "^5.4.5"
+    "@types/node": "^22.15.18",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "openai": "^4.51.0"
+    "@ai-sdk/openai": "^1.3.22",
+    "ai": "^4.3.15",
+    "dotenv": "^16.5.0",
+    "zod": "^3.24.4"
   }
 }
