--- a/telegram-openai/package.json
+++ b/telegram-openai/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@types/node": "^20.14.2",
-    "tsx": "^4.15.5",
-    "typescript": "^5.3.3"
+    "@types/node": "^22.15.18",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "openai": "^4.51.0",
+    "@ai-sdk/openai": "^1.3.22",
+    "ai": "^4.3.15",
+    "dotenv": "^16.5.0",
     "telegraf": "^4.16.3"
   }
 }
