--- a/whatsapp-openai/package.json
+++ b/whatsapp-openai/package.json
@@ -7,14 +7,16 @@
         "start": "ts-node api.ts"
     },
     "dependencies": {
-        "express": "^4.18.2",
         "body-parser": "^1.20.2",
-        "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^4.18.2",
+        "openai": "^4.100.0"
     },
     "devDependencies": {
-        "@types/express": "^4.17.21",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     }
