--- a/study-assistant/package.json
+++ b/study-assistant/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
+    "better-sqlite3": "^11.10.0",
     "dotenv": "^16.0.3",
     "openai": "^4.0.0",
     "readline-sync": "^1.4.10"
