--- a/study-assistant/package.json
+++ b/study-assistant/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
+    "ai": "^4.3.15",
     "better-sqlite3": "^11.10.0",
     "dotenv": "^16.0.3",
     "openai": "^4.0.0",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/readline-sync": "^1.4.4",
