--- a/study-assistant/package.json
+++ b/study-assistant/package.json
@@ -12,16 +12,20 @@
   "description": "",
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@langchain/openai": "^0.5.10",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
     "ai": "^4.3.15",
     "better-sqlite3": "^11.10.0",
     "dotenv": "^16.0.3",
+    "langchain": "^0.3.26",
     "openai": "^4.0.0",
+    "pdf-parse": "^1.1.1",
     "readline-sync": "^1.4.10",
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/pdf-parse": "^1.1.5",
     "@types/readline-sync": "^1.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
