--- a/study-assistant/web/package.json
+++ b/study-assistant/web/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
