first document upload implementation

--- a/study-assistant/server/package.json
+++ b/study-assistant/server/package.json
@@ -13,13 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/openai": "^0.0.14",
+    "@types/multer": "^1.4.12",
     "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "@langchain/openai": "^0.0.14",
     "langchain": "^0.1.25",
-    "openai": "^4.28.0"
+    "multer": "^1.4.5-lts.2",
+    "openai": "^4.28.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
@@ -31,4 +34,3 @@
     "typescript": "^5.3.3"
   }
 }
- 
