--- a/study-assistant/web/package.json
+++ b/study-assistant/web/package.json
@@ -17,11 +17,14 @@
     "@types/force-graph": "^1.21.2",
     "force-graph": "^1.49.6",
     "marked": "^15.0.11",
+    "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.12",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
