--- a/whatsapp-openai/tsconfig.json
+++ b/whatsapp-openai/tsconfig.json
@@ -7,6 +7,8 @@
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true
     }
 }
