--- a/study-assistant/server/package.json
+++ b/study-assistant/server/package.json
@@ -22,7 +22,8 @@
     "langchain": "^0.1.25",
     "multer": "^1.4.5-lts.2",
     "openai": "^4.28.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^2.16.105"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
