--- a/study-assistant/web/package.json
+++ b/study-assistant/web/package.json
@@ -19,6 +19,7 @@
     "marked": "^15.0.11",
     "multer": "^1.4.5-lts.2",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
