--- a/study-assistant/web/package.json
+++ b/study-assistant/web/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/force-graph": "^1.21.2",
     "force-graph": "^1.49.6",
+    "katex": "^0.16.22",
     "marked": "^15.0.11",
     "multer": "^1.4.5-lts.2",
     "pdf-parse": "^1.1.1",
@@ -23,7 +24,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@types/multer": "^1.4.12",
