--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 .env
 .DS_Store
 node_modules
+
+# Ignore SQLite database files
+*.db
+server/*.db
+server/**/*.db
+study-assistant/server/*.db
+study-assistant/server/**/*.db
+uploads/
