--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@google/generative-ai": "^0.2.1",
     "@langchain/openai": "^0.5.10",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
