--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@langchain/openai": "^0.0.14",
     "@types/multer": "^1.4.12",
     "better-sqlite3": "^9.4.3",
