--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
   "name": "study-assistant-server",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend server for Study Assistant",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,12 +17,14 @@
     "@google/generative-ai": "^0.24.1",
     "@langchain/openai": "^0.0.14",
     "@types/multer": "^1.4.12",
+    "@types/node-fetch": "^2.6.12",
     "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "langchain": "^0.1.25",
     "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
     "openai": "^4.28.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^2.16.105"
@@ -33,6 +36,7 @@
     "@types/node": "^20.11.24",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.3.3"
   }
 }
